--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="./eisenhower-matrix.jpg">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
+  <div class="main-content">
     <p id="top-section__for-adding-element-to-list">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
