refactor(extended-2.1): Specify alternative content for multimedia elements

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 </head>
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main>
+  <main class="main">
     <article class="main-content">
-      <section id="top-sec__add-elem">
+      <section id="add-item">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button aria-label="Add">Add</button>
+          <input id="new-task" class="task" type="text">
+          <button aria-label="Add" class="add">Add</button>
         </div>
       </section>
-      <section class="top-sec__todo">
+      <section class="todo">
         <h3>Todo</h3>
-        <ul id="incomplete-tasks">
+        <ul id="incomplete-tasks" class="task-list">
           <li>
             <input type="checkbox">
             <label class="task">Pay Bills</label>
@@ -37,9 +37,9 @@
           </li>
         </ul>
       </section>
-      <section class="top-sec__completed">
+      <section class="completed">
         <h3>Completed</h3>
-        <ul id="completed-tasks">
+        <ul id="completed-tasks" class="task-list">
           <li>
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
